<resources>
    <string name="app_name">PizzaLove</string>
    <string name="image0">Sugo</string>
    <string name="image1">Mozzarella</string>
    <string name="image2">Bacon</string>
    <string name="image3">Broccoli</string>
    <string name="image4">Cipolle</string>
    <string name="image5">Grana</string>
    <string name="image6">Funghi</string>
    <string name="image7">Gamberetti</string>
    <string name="image8">Melanzane</string>
    <string name="image9">Olive</string>
    <string name="image10">Patatine</string>
    <string name="image11">Peperoncino</string>
    <string name="image12">Peperoni</string>
    <string name="image13">Pomodoro</string>
    <string name="image14">Salame</string>
    <string name="image15">Uova</string>
    <string name="image16">Wurstel</string>
    <string name="image17">Zucchine</string>
    <string name="image18">Capperi</string>
    <string name="image19">Acciughe</string>
    <string name="image20">Cotto</string>
    <string name="image21">Basilico</string>
    <string name="map_geo_search_input_hint">Cerca</string>
    <string name="imageMain">imageMain</string>
    <string name="listPizza">listPizza</string>
    <string name="ingrediente">ingrediente</string>
    <string name="map_list_header_txt">lista indirizzi</string>
    <string name="btnCrea">crea la tua Pizza</string>
    <string name="btnElenco">menu</string>
    <string name="btnAddPizzaCreate">ordina</string>
    <string name="txtTotale">0.00€</string>
    <string name="lblListHCarrelloNum">12</string>
    <string name="lblListHCarrelloNome">12</string>
    <string name="lblListHCarrelloPrezzo">12</string>
    <string name="lblListHCarrelloTotale">12</string>
    <string name="expandableList">expandableList</string>
    <string name="btnCreaPizza">CreaPizza</string>
    <string name="google_app_id">986106066246</string>
    <string name="rmvIngredientethumb">remove ingrediente</string>
    <string name="priceIngrediente">2,30 $</string>
    <string name="nameIngredientethumb">mozzarella</string>
    <string name="nmbIngredientethumb">1</string>
    <string name="autocomplete_text">Inserisci il tuo indirizzo</string>
    <string name="totaleCarrello">Totale</string>
    <string name="annulla">annulla</string>
    <string name="consegna">Consegna a </string>
    <string name="aggiunteElenco">aggiungi Ingredienti</string>
</resources>
