<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_weight="1"
    android:padding="8dp">

    <ImageButton
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:gravity="right"

        android:background="@drawable/ics_rossa"
        android:id="@+id/lblListHCarrelloRemove" />

    <ImageButton
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:gravity="right"
        android:background="@drawable/modifica"
        android:id="@+id/lblListHCarrelloModifica" />

    <TextView
        android:id="@+id/lblListHCarrelloNum"
        android:layout_width="17dp"
        android:layout_height="wrap_content"

        android:textSize="17sp"
        android:gravity="center"
        android:text="@string/lblListHCarrelloNum" />

    <TextView
        android:id="@+id/lblListHCarrelloNome"
        android:layout_width="140dp"
        android:layout_height="wrap_content"

        android:textSize="17sp"
        android:gravity="left"
        android:text="@string/lblListHCarrelloNome" />


    <TextView
        android:id="@+id/lblListHCarrelloPrezzo"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center"
        android:text="@string/lblListHCarrelloPrezzo"
        />

    <TextView

        android:id="@+id/lblListHCarrelloPrezzoTotale"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center"
        android:text="@string/lblListHCarrelloTotale"
        />


</LinearLayout>