<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.example.perlo.aiuto.CreaPizza">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageMain"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/layers"

            android:contentDescription="imageMain" />





    </LinearLayout>

    <HorizontalScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"

    android:visibility="visible">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
          >


            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/image"
                android:src="@drawable/sugo"
                android:contentDescription="@string/image0" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/image1"
                android:src="@drawable/mozzarella"
                android:contentDescription="@string/image1" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/image2"
                android:src="@drawable/basilico"
                android:contentDescription="@string/image2" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/image3"
                android:src="@drawable/funghi"
                android:contentDescription="@string/image3" />
            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/image4"
                android:src="@drawable/salmone"
                android:contentDescription="@string/image4" />

        </LinearLayout>
    </HorizontalScrollView>


</LinearLayout>