<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tiallap"
    android:padding="10dp"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="100dp"
       android:layout_marginBottom="10dp">

       <ImageView
           android:id="@+id/resumePizzeria"
           android:layout_height="fill_parent"
           android:layout_width="fill_parent"
           android:layout_margin="10dp"
           android:contentDescription="@string/lblListHCarrelloNome"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consegna"
            android:textSize="18sp"
            android:background="@color/background_material_light_1" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@color/background_material_light_1"
            android:id="@+id/edtIndirizzo"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/note_final"
        android:orientation="vertical">
        <ScrollView
            android:paddingTop="22dp"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:id="@+id/lblListOrdina">
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="90dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="26sp"
                android:layout_marginRight="20dp"
                android:text="@string/totaleCarrello"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/resumeTotale"
                android:textSize="26sp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/btnClassica">

        <Button
            android:layout_weight="1"
            android:id="@+id/btnAnnulla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/annulla"
            android:visibility="visible"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_shape" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btnPaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:visibility="visible"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_shape" />
    </LinearLayout>
</LinearLayout>